@@ -1,3 +1,12 @@
+2003-01-05  Seth Nickell  <snickell@stanford.edu>
+
+	* gnome-theme-manager.c: (add_custom_row_to_meta_theme),
+	(remove_custom_row_from_meta_theme):
+	* theme-thumbnail.c: (theme_thumbnail_invalidate_cache):
+	* theme-thumbnail.h:
+	
+	Generate thumbnails for the custom theme.
+
 Thu Jan  2 08:57:54 2003  Jonathan Blandford  <jrb@gnome.org>
 
 	* gnome-theme-manager.c: correctly merge disk updates and the
